# kafka-ui-operator

./: .gitignore  LICENSE  README.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  release.yaml
lib/charms/data_platform_libs/v0/: data_interfaces.py
src/: charm.py  config.yaml  literals.py  workload.py
src/core/: models.py  structured_config.py  workload.py
src/events/: tls.py  user_secrets.py
src/managers/: config.py  tls.py
terraform/: main.tf  outputs.tf
tests/integration/: conftest.py  helpers.py  test_charm.py
tests/unit/: test_charm.py
